; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_uname.c_sys_uname.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_uname.c_sys_uname.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uname = type { i32 }

@_EFAULT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sys_uname(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.uname, align 4
  store i32 %0, i32* %3, align 4
  %5 = call i32 @do_uname(%struct.uname* %4)
  %6 = load i32, i32* %3, align 4
  %7 = getelementptr inbounds %struct.uname, %struct.uname* %4, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i64 @user_put(i32 %6, i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = load i32, i32* @_EFAULT, align 4
  store i32 %12, i32* %2, align 4
  br label %14

13:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %14

14:                                               ; preds = %13, %11
  %15 = load i32, i32* %2, align 4
  ret i32 %15
}

declare dso_local i32 @do_uname(%struct.uname*) #1

declare dso_local i64 @user_put(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
